objects/TEMarketing__Distributor__c.object
<CustomObject>
    <description>This object hold information about each distributor</description>
    <fields>
        <fullName>TEMarketing__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Group_ID__c</fullName>
        <description>ID of the group that holds all the users for this distributor.  Used for record sharing.</description>
        <inlineHelpText>ID of the public group that holds all the users for this distributor.  Used for record sharing.</inlineHelpText>
        <label>Group ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>World_Wide_Account_Name__c</fullName>
        <description>The world wide account name for the distributor.  This helps map values in Eloqua for automatic routing.</description>
        <inlineHelpText>The world wide account name for the distributor.  This helps map values in Eloqua for automatic routing.</inlineHelpText>
        <label>World Wide Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Distributor</label>
    <listViews>
        <fullName>TEMarketing__All</fullName>
        <columns>NAME</columns>
        <columns>World_Wide_Account_Name__c</columns>
        <columns>TEMarketing__Active__c</columns>
        <columns>TEMarketing__Group_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Distributor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distributors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>